@@ -1,3 +1,9 @@
+Tue Aug  6 17:02:17 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* win32/win32.c (rb_w32_conv_from_wchar): use WideCharToMultiByte(),
+	  as like as mbstr_to_wstr(), in the first step of the convertion from
+	  WCHAR.
+
 Tue Aug  6 16:14:32 2013  Shugo Maeda  <shugo@ruby-lang.org>
 
 	* vm_eval.c (eval_string_with_cref): copy cref to limit the scope of
